[skip ci] updated

--- a/series/02.md
+++ b/series/02.md
@@ -52,7 +52,7 @@
 Word2Vec（Mikolov et al., 2013）を例に考えよう。学習後の単語ベクトルを観察すると、**高頻度語ほどノルムが大きい傾向がある**ことが報告されている（Schakel & Wilson, 2015）。
 
 > [!NOTE]
-> **条件依存性：** この傾向は常に成り立つわけではなく、手法（SGNS/CBOW）、サブサンプリングの有無、負例分布、正則化、学習率スケジュール等によって変わりうる。以下の議論は「典型的に観察される傾向」として理解されたい。
+> **条件依存性：** この傾向は常に成り立つわけではなく、手法（SGNS/CBOW）、サブサンプリングの有無、負例分布、正則化、学習率スケジュール等によって変わりうる。また、入力側の埋め込み、出力側の埋め込み、あるいはそれらの平均など、**どの表現を観察するか**でも傾向は異なる。以下の議論は「典型的に観察される傾向」として理解されたい。
 
 これは何を意味するのか？
 
@@ -80,7 +80,7 @@ $$p_i = \frac{\exp(z_i)}{\sum_j \exp(z_j)}$$
 深層学習の初期（2010年代前半）には、多くの場合、表現ベクトルを正規化せずに使うことが一般的だった。コサイン類似度を使う場合でも、計算時に正規化するだけで、表現自体は非正規化のままであることが多かった。
 
 > [!NOTE]
-> **例外の存在：** タスクによっては、昔からコサイン類似度を前提として、事実上の正規化相当の運用をしていた例もある（情報検索など）。ここでの記述は「代表的な深層学習の実践」についてである。
+> **例外の存在：** タスクによっては、昔からコサイン類似度を前提として、事実上の正規化相当の運用をしていた例もある（情報検索、距離学習（metric learning）など）。ここでの記述は「代表的な深層学習の実践」についてである。
 
 この設計には、以下の問題がある：
 
@@ -134,7 +134,7 @@ $$\frac{\sqrt{\text{Var}[r^2]}}{\mathbb{E}[r^2]} = \frac{\sqrt{2d}}{d} = \sqrt{\
 
 距離の集中は、**最近傍探索（kNN）** に深刻な影響を与えうる。
 
-理想的には、「近い点」と「遠い点」を明確に区別したい。しかし、特定の条件下では、高次元で最遠点と最近点の距離比が1に近づく現象が起きる：
+理想的には、「近い点」と「遠い点」を明確に区別したい。しかし、典型的な i.i.d. 設定では、次元が上がるにつれて最近傍と最遠傍の相対差が小さくなることが知られている。これは以下のように表現される：
 
 $$\frac{d_{\max} - d_{\min}}{d_{\min}} \to 0$$
 
@@ -190,7 +190,7 @@ $d$ 次元単位球面上で、北極 $(1, 0, \ldots, 0)$ との角度 $\theta$ 
 直交するベクトルは「互いに干渉しない」。高次元空間には、内積が小さい（ほぼ直交する）ベクトルを**多数**配置できる。
 
 > [!NOTE]
-> **球面符号との関係：** 「内積が $\epsilon$ 以下のベクトルをいくつ配置できるか」は、球面符号（spherical code）の問題として研究されている。ランダム構成では、$d$ 次元で内積 $\epsilon$ 以下のベクトルを $\exp(c \cdot d)$ 個程度配置できることが知られている（$c$ は $\epsilon$ に依存する定数）。ただし、この「指数的」というスケーリングは、$\epsilon$ の取り方、誤差の定義、ランダム構成か最適配置かによって係数や成立条件が変わる。詳細は Conway & Sloane (1999) を参照。
+> **球面符号との関係：** 「内積が $\epsilon$ 以下のベクトルをいくつ配置できるか」は、球面符号（spherical code）の問題として研究されている。確率的構成（ランダムにベクトルを選ぶ）により、$d$ 次元で内積 $\epsilon$ 以下のベクトルが $\exp(c \cdot d)$ 個程度**存在しうる**ことが示せる（$c$ は $\epsilon$ に依存する定数）。これは存在の下界であり、最適配置ではさらに多く取れる場合もある。ただし、係数 $c$ や成立条件は $\epsilon$ の取り方、誤差の定義、構成法によって変わる。詳細は Conway & Sloane (1999) を参照。
 
 ### 大規模言語モデルへの示唆
 
@@ -239,7 +239,7 @@ $$\mathbf{v} = \frac{\|\mathbf{u}\|^2}{1 + \|\mathbf{u}\|^2} \cdot \frac{\mathbf
 
 ### カプセルネットワークの評価
 
-カプセルネットワークは、理論的には美しいアイデアだが、実用上の課題が多いと指摘されている：
+カプセルネットワークは、理論的には美しいアイデアだが、実用上の課題が多いと指摘されている（Peer et al., 2018; Gu & Tresp, 2020）：
 
 - **計算コスト：** 動的ルーティングが計算量を増やす
 - **スケーラビリティ：** ImageNetのような大規模データセットへの適用が困難
@@ -462,6 +462,12 @@ plt.show()
 
 - Sabour, S., Frosst, N., & Hinton, G. E. (2017). Dynamic Routing Between Capsules. *NeurIPS 2017*. arXiv: [arXiv:1710.09829](https://arxiv.org/abs/1710.09829).
   - カプセルネットワークの原論文。
+
+- Peer, D., Stabinger, S., & Rodríguez-Sánchez, A. (2018). Limitations of Capsule Networks. *NeurIPS 2018 Workshop*. 
+  - カプセルネットワークの限界（計算コスト、スケーラビリティ）を分析。
+
+- Gu, J., & Tresp, V. (2020). Improving the Robustness of Capsule Networks to Image Affine Transformations. *CVPR 2020*.
+  - カプセルネットワークの改良と、大規模データセットでの課題を議論。
 
 ### 球面符号・高次元幾何
 
