--- a/series/02.md
+++ b/series/02.md
@@ -67,9 +67,13 @@ $$p_i = \frac{\exp(z_i)}{\sum_j \exp(z_j)}$$
 
 この設計には、以下の問題がある：
 
-1. **類似度とノルムの干渉：** 二つのベクトルの類似度を測る際、ノルムの違いが「意味の違い」と混同される
+1. **類似度とノルムの干渉（ハブ化の問題）：** 内積 $\mathbf{a} \cdot \mathbf{b} = \|\mathbf{a}\| \|\mathbf{b}\| \cos \theta$ を使う場合、ノルムが大きいベクトルは、あらゆるベクトルとの内積が大きくなりやすい。これにより、高頻度語などが無関係な検索クエリでも上位に出現する「ハブ化（hubness）」と呼ばれる現象が生じる。
 2. **学習の不安定性：** ノルムが発散または崩壊すると、勾配も不安定になる
 3. **解釈の困難：** ベクトルの各成分が何を意味するか分かりにくい
+
+> [!TIP]
+> **現代的な緩和策（Layer Normalization）：**
+> 現代のTransformerモデルで標準的に使われる **Layer Normalization** も、この問題への回答の一つです。LayerNormは各トークンベクトルの平均と分散を正規化するため、結果としてベクトルのノルムを $\sqrt{d}$ 付近に強制的に揃える効果を持ちます。これにより、明示的な球面上での最適化を行わなくとも、実質的に「ノルムの呪い」を緩和した状態で学習が進むようになっています。
 
 ## 次元の呪いの幾何学的理解
 
