Updated talk style

--- a/series/02.md
+++ b/series/02.md
@@ -73,7 +73,7 @@ $$p_i = \frac{\exp(z_i)}{\sum_j \exp(z_j)}$$
 
 > [!TIP]
 > **現代的な緩和策（Layer Normalization）：**
-> 現代のTransformerモデルで標準的に使われる **Layer Normalization** も、この問題への回答の一つです。LayerNormは各トークンベクトルの平均と分散を正規化するため、結果としてベクトルのノルムを $\sqrt{d}$ 付近に強制的に揃える効果を持ちます。これにより、明示的な球面上での最適化を行わなくとも、実質的に「ノルムの呪い」を緩和した状態で学習が進むようになっています。
+> 現代のTransformerモデルで標準的に使われる **Layer Normalization** も、この問題への回答の一つだ。LayerNormは各トークンベクトルの平均と分散を正規化するため、結果としてベクトルのノルムを $\sqrt{d}$ 付近に強制的に揃える効果を持つ。これにより、明示的な球面上での最適化を行わなくとも、実質的に「ノルムの呪い」を緩和した状態で学習が進むようになっている。
 
 ## 次元の呪いの幾何学的理解
 
